.provarCaches/00D410000011HE0EAM/objects/rstkf__glapcc__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glapcc</customHelpPage>
    <description>glapcc__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glapcc_cmpno__r.rstkf__externalid__c  &amp; &apos;_&apos; &amp; UPPER( rstkf__glapcc_type__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT( rstkf__glapcc_desc__c , 76) &amp; &apos;_&apos; &amp;  UPPER( rstkf__glapcc_type__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glapcc_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Credit Card Accounts</relationshipLabel>
        <relationshipName>glapccs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glapcc_desc__c</fullName>
        <label>Credit Card Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glapcc_type__c</fullName>
        <label>Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glapcc_unbilledccacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unbilled Credit Card Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Credit Card Accounts</relationshipLabel>
        <relationshipName>glapccs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glapcc_vendno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Credit Card Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Credit Card Accounts</relationshipLabel>
        <relationshipName>glapccs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Credit Card Account</label>
    <listViews>
        <fullName>rstkf__RS_Credit_Card_Account</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glapcc_cmpno__c</columns>
        <columns>rstkf__glapcc_vendno__c</columns>
        <columns>rstkf__glapcc_desc__c</columns>
        <columns>rstkf__glapcc_type__c</columns>
        <columns>rstkf__glapcc_unbilledccacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Credit Card Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Credit_Card_Account_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glapcc_cmpno__c</columns>
        <columns>rstkf__glapcc_vendno__c</columns>
        <columns>rstkf__glapcc_desc__c</columns>
        <columns>rstkf__glapcc_type__c</columns>
        <columns>rstkf__glapcc_unbilledccacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Credit Card Account - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Card Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__companycannotbechanged</fullName>
        <active>true</active>
        <description>Company is required and not modifiable</description>
        <errorConditionFormula>ISBLANK( rstkf__glapcc_cmpno__c )  || (!ISNEW() &amp;&amp;  ISCHANGED( rstkf__glapcc_cmpno__c))</errorConditionFormula>
        <errorMessage>Company is required and not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__creditcarddescisrequired</fullName>
        <active>true</active>
        <description>Credit Card Description is required</description>
        <errorConditionFormula>ISBLANK(rstkf__glapcc_desc__c )</errorConditionFormula>
        <errorMessage>Credit Card Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__creditcardvendorisrequired</fullName>
        <active>true</active>
        <description>Credit Card Vendor is required</description>
        <errorConditionFormula>ISBLANK(rstkf__glapcc_vendno__c )</errorConditionFormula>
        <errorMessage>Credit Card Vendor is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__typeisrequiredandnotmodifiable</fullName>
        <active>true</active>
        <description>Type is required and not modifiable</description>
        <errorConditionFormula>ISBLANK(  rstkf__glapcc_type__c )  || (!ISNEW() &amp;&amp;  ISCHANGED(  rstkf__glapcc_type__c))</errorConditionFormula>
        <errorMessage>Type is required and not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__unbilledccacctisrequired</fullName>
        <active>true</active>
        <description>Unbilled Credit Card Account is required</description>
        <errorConditionFormula>ISBLANK(rstkf__glapcc_unbilledccacct__c )</errorConditionFormula>
        <errorMessage>Unbilled Credit Card Account is required</errorMessage>
    </validationRules>
</CustomObject>